# soccer-api/soccer-api/app/Models/GameMatch.php
@@ -11,7 +11,7 @@ class GameMatch extends BaseModel
     use Compoships;
 
     protected $fillable = ['id_home', 'id_away', 'start_time', 'stadium', 'status'];
-
+    protected $hidden = ['id_home', 'id_away'];
     public function home_team() {
         return $this->belongsTo(Team::class, 'id_home', 'id');
     }
@@ -21,13 +21,17 @@ class GameMatch extends BaseModel
      }
 
      public function home_stats() {
-        return $this->hasOne(TeamMatch::class, ['id_match', 'id_team'], ['id', 'id_home'])->with(['team_list' => function($q) {
-            $q->join('players', 'players.id', '=', 'id_player')->select('id_player as id', 'id_team_match', 'name', 'date_of_birth', 'nationality');
-        }]);
+         return $this
+             ->hasOne(TeamMatch::class, ['id_match', 'id_team'], ['id', 'id_home'])
+             ->with([
+                 'team_list' => fn($q) => $q->select('id_player', 'is_sub', 'id_team_match'),
+                 'team' => fn($q) => $q->select('id', 'name', 'short_name', 'coach')
+             ]);
      }
 
      public function away_stats() {
          return $this->hasOne(TeamMatch::class, ['id_match', 'id_team'], ['id', 'id_away'])->with('team_list');
      }
+
 
 }
