# soccer-api/soccer-api/app/Models/PlayerMatch.php
@@ -9,9 +9,11 @@ class PlayerMatch extends Model
 {
     use HasFactory;
 
-    protected $fillable = ['id_player', 'id_team_match', 'id_sub', 'position'];
+    protected $fillable = ['id_player', 'id_team_match', 'is_sub', 'position'];
 
     public function player() {
-        return $this->hasOne(Player::class, 'id_player', 'id');
+        return $this->hasOne(Player::class, 'id', 'id_player');
     }
+
+    protected $hidden = ['id_team_match'];
 }
